Added users list

--- a/chat/assets/styles/style.css
+++ b/chat/assets/styles/style.css
@@ -31,6 +31,7 @@
   overflow: auto;
   position: relative;
   margin-bottom: 20px;
+  border: 1px solid #e7e7e7;
 }
 .message-wrapper:before{
   content: '';
