--- a/chat/views/layout.ejs
+++ b/chat/views/layout.ejs
@@ -20,7 +20,7 @@
           <div class="loged-user">
             Welcome <%= user.username %>
             &nbsp;|&nbsp;
-            <a href="/logout">Logout</a>
+            <a href="/logout" class="js-logout">Logout</a>
           </div>
         <%}else{%>
           <ul class="nav navbar-nav col-sm-4">
@@ -28,10 +28,10 @@
           </ul>
           <form class="col-sm-4 login" action="/login" method="post">
             <div class="col-sm-5">
-              <input class="form-control" type="text" value="" placeholder="Login" name="username">
+              <input class="form-control" id="username" type="text" value="" placeholder="Login" name="username">
             </div>
             <div class="col-sm-5">
-              <input class="form-control" type="password" value="" placeholder="Password" name="password">
+              <input class="form-control" id="password" type="password" value="" placeholder="Password" name="password">
             </div>
             <input type="submit" value="Login" class="btn btn-default col-sm-2">
           </form>
