--- a/chat/views/register.ejs
+++ b/chat/views/register.ejs
@@ -5,6 +5,9 @@
 <div id="success" class="bg-success message">sdsd</div>
 <form action="" method="post" id="register">
   <div class="form-group">
+    <input class="form-control" type="email" name="email" value="" id="email" placeholder="Email">
+  </div>
+  <div class="form-group">
     <input class="form-control" type="text" name="name" value="" id="name" placeholder="User Name">
   </div>
   <div class="form-group">
