--- a/chat/assets/js/Templates/Login/Index.html
+++ b/chat/assets/js/Templates/Login/Index.html
@@ -4,7 +4,7 @@
 
     <form class="form-signin clearfix" role="form">
         <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
-        <input type="password" name="password" class="form-control" placeholder="Password" required>
+        <input type="password" name="password" class="form-control" placeholder="Password" required autocomplete="off">
 
         <!--<input type="checkbox" id="StaySignedId" name="StaySignedId" value="true">-->
         <!--<label class="checkbox" for="StaySignedId">Remember me</label>-->
