--- a/chat/views/layout.ejs
+++ b/chat/views/layout.ejs
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>NYC Short Lease Project</title>
+    <head>
+      <title>Chat</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/jquery-ui.min.css">
-  <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/jquery-ui.min.css">
+      <link rel="stylesheet" href="css/main.css">
 
-  <script data-main="js/main.js?v.0.1" src="/assets/requirejs/require.js?v.0.1" type="text/javascript"></script>
+      <script data-main="js/main.js?v.0.1" src="/assets/requirejs/require.js?v.0.1" type="text/javascript"></script>
 
-  <script type="text/javascript">
-    var BASE_URL = '',
-            SOURCE_PATH = ''
-  </script>
+      <script type="text/javascript">
+        var BASE_URL = '',
+                SOURCE_PATH = ''
+      </script>
 
-</head>
+    </head>
 
-<body id="main">
-</body>
+    <body id="main"></body>
 </html>
