--- a/chat/assets/js/Templates/Header.html
+++ b/chat/assets/js/Templates/Header.html
@@ -25,16 +25,7 @@
         </div>
     <%}else{%>
         <ul class="nav navbar-nav col-sm-4">
-            <li><a href="register">Register</a></li>
+            <li><a href="#register">Register</a></li>
         </ul>
-        <form class="col-sm-4 login" action="/login" method="post">
-            <div class="col-sm-5">
-                <input class="form-control" id="email" type="text" value="" placeholder="Email" name="email">
-            </div>
-            <div class="col-sm-5">
-                <input class="form-control" id="password" type="password" value="" placeholder="Password" name="password">
-            </div>
-            <input type="submit" value="Login" class="btn btn-default col-sm-2">
-        </form>
     <%}%>
 </div><!--/.nav-collapse -->
